# app/Http/Resources/StructureResource.php
@@ -3,6 +3,7 @@
 namespace App\Http\Resources;
 
 use App\Models\SourceFinancement;
+use App\Models\TypeActeur;
 use Illuminate\Http\Resources\Json\JsonResource;
 
 class StructureResource extends JsonResource
@@ -21,16 +22,14 @@ class StructureResource extends JsonResource
             'addresse_siege' =>  $this->addresse_siege,
             'type_fonds' =>  $this->type_fonds,
             'telephone' =>  $this->telephone,
-            'prenom_personne_responsable' =>  [
+            'acteur' => $this->acteur->libelle,
+            'personne_responsable' =>  [
                 $this->prenom_personne_responsable,
                 $this->nom_personne_responsable,
                 $this->email_personne_responsable,
                 $this->telephone_personne_responsable,
             ], 
             'source_financement' => $this->sourceFiancement,
-            //'source_financement' => SourceFinancement::where('id',$this->source_financement_id)->pluck('denomination')->first(),
-            //'source_financement' =>  SourceFinancement::with('acteurs')->where('id', $this->id)->get(),
-            //'type_acteurs' =>  $this->sourceFiancement->with('acteurs'),
         ];
     }
 }
